<resources>
    <string name="app_name">CinemaTech</string>
    <string name="to_come">To Come</string>
    <string name="to_see">To watch</string>
    <string name="movies">Movies</string>
    <string name="dvd">DVD</string>
    <string name="my_account">My Account</string>
    <string name="buy">Buy</string>
    <string name="to_buy">To Buy</string>
    <string name="profile_name">profile name</string>
    <string name="movies_added">movies added</string>
    <string name="time_spent_watching">time spent watching</string>
    <string name="default_number" translatable="false">0</string>
    <string name="profile_picture">profile picture</string>
    <string name="search">Search</string>
    <string name="image_of_movie">image_of_movie</string>
    <string name="realisation_de">realisation_de</string>
    <string name="duree">duree</string>
    <string name="synopsis" translatable="false">synopsis</string>
    <string name="acteur_1_acteur_2_acteur_3" translatable="false">acteur_1_acteur_2_acteur_3</string>
    <string name="titre">title</string>
    <string name="ajouter_la_liste_voir">Add in list to watch</string>
    <string name="datesortie">release date</string>
    <string name="acteurs_principaux">principals actors</string>
    <string name="scenario_de">Writer</string>
    <string name="seen">Seen</string>
    <string name="DVD_Number">Number of DVD</string>
    <string name="Missing_DVD_number">Number of missing DVD</string>

    <string name="director">Director</string>
    <string name="title">Title</string>

    <string name="enter_profile_name">Enter new profile name :</string>
    <string name="OK" translatable="false">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="new_profile">New User</string>
    <string name="Change_Profile">Change User</string>
    <string name="search_hint">search</string>
    <string name="name">Name</string>
    <string name="Empty">Empty</string>
    <string name="basique" translatable="false">Basique</string>
    <string name="TITLE" translatable="false">Title</string>
    <string name="movie_image" translatable="false">Movie image</string>
    <string name="add_to_seen">Add To Seen List</string>
    <string name="add_to_getlist">Add to the list of possession</string>
    <string name="add_list_dvd_to_get">Add in list of dvd you want</string>
    <string name="remove_list">Remove from the list</string>
    <string name="Unknown">Unknown</string>
    <string name="del_profile">Delete User</string>
    <string name="none" translatable="false">none</string>
    <string name="movie_add">Movie add</string>
    <string name="movie_remove">Movie remove</string>
    <!--<string name="date_sortie">date_sortie</string>-->
</resources>