<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddListMovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageMovie"
                    android:layout_width="142dp"
                    android:layout_height="141dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_of_movie"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/titre" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/duree" />

                    <TextView
                        android:id="@+id/timeMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Empty" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="datesortie" />

                    <TextView
                        android:id="@+id/dateExitMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Empty" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/realisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/realisation_de" />

            <TextView
                android:id="@+id/realizationMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Empty" />

            <TextView
                android:id="@+id/actorsPrincipalMovie"
                android:layout_width="171dp"
                android:layout_height="26dp"
                android:layout_marginTop="32dp"
                android:text="@string/acteurs_principaux" />

            <TextView
                android:id="@+id/actorsMovie"
                android:layout_width="185dp"
                android:layout_height="25dp"
                android:text="@string/Empty" />

            <TextView
                android:id="@+id/scenario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/scenario_de" />

            <TextView
                android:id="@+id/scenarioMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Empty" />

            <TextView
                android:id="@+id/synopsisMovie"
                android:layout_width="0dp"
                android:layout_height="171dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="16dp"
                android:text="@string/synopsis" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonAddListMovie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/ajouter_la_liste_voir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/scrollView3" />

</androidx.constraintlayout.widget.ConstraintLayout>